<resources>
    <string name="app_name">DistanceTrackerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_bl_ank_fragment">Hello blank fragment</string>
    <string name="continue_btn">Continue</string>
    <string name="permission_desc" >welcome to distance tracker.In order to use our application we need first require location permission from you otherwise we will not be able to provide our service if you agree and wish to continue tp below button</string>
    <string name="permission">Permission Required</string>
    <string name="tap_on_my_location_button">Tap on My Location Button</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="reset_button">Reset</string>
    <string name="distance_text">Distance</string>
    <string name="time_text">Time</string>
    <string name="share_button">Share</string>
    <string name="result">%1$s km</string>
    <string name="go">G0</string>


</resources>