<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsFragment" />

        <TextView
            android:id="@+id/text_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textColor="@color/red"
            android:textSize="@dimen/timer_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_on_my_location_button"
            android:textColor="@color/black"
            android:textSize="@dimen/hint_text_size"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_button"
            android:text="@string/start_button"
            android:layout_marginBottom="@dimen/margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/blue_500"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stop_button"
            android:text="@string/stop_button"
            app:backgroundTint="@color/red"
            android:layout_marginBottom="@dimen/margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button"
            android:text="@string/reset_button"
            android:layout_marginBottom="@dimen/margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:icon="@drawable/reset"
            app:backgroundTint="@color/orange"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

