<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PermissionFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_width"
        android:id="@+id/welcome_image"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:src="@drawable/welcome_image"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/permission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/permission_desc_textview"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textSize="@dimen/permission_text_size"
        android:text="@string/permission" />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/permission_desc_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/continue_button"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:textStyle="italic|bold"

        android:text="@string/permission_desc" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/continue_button"
        android:text="@string/continue_btn"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>